--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Antonio';
+  src: url('/Fonts/Antonio-VariableFont_wght.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
 
 .fjalla-one{
   font-family: "FjallaOne" , sans-serif;
@@ -47,5 +53,8 @@
 }
 .arial-bold{
   font-family: "ARIALBD" , sans-serif;
+}
+.antonio{
+  font-family: "Antonio" , sans-serif;
 }
 
